Changes to benchmarks to make them work for VTune and GT